Implement to do list crud functionality

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,8 @@
       }
     ],
     "arrow-body-style": "off",
-    "quotes": "off"
+    "quotes": "off",
+    "linebreak-style": "off"
   },
   "ignorePatterns": ["dist/", "build/"]
 }
